--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ h2 {
 
 .center {
   text-align: center;
-  margin-top: -32px;
   margin-bottom: 48px;
 }
 
@@ -85,11 +84,21 @@ p {
   display: flex;
   justify-content: flex-end;
 }
+.flex-wrap {
+  flex-wrap: wrap;
+}
 
 .column {
   padding: 12px;
   flex: 1 1 0px;
+  min-width: 300px;
 }
+@media (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+}
+
 .image img {
   object-fit: contain;
   min-width: 100%;
@@ -137,8 +146,13 @@ p {
 .letter {
   width: 90px;
   height: 100px;
-
   object-fit: contain;
+}
+@media (max-width: 1000px) {
+  .letter {
+    width: 50px;
+    height: 60px;
+  }
 }
 
 .medium img {
@@ -146,10 +160,39 @@ p {
 }
 
 .medium {
-  margin: 120px auto;
+  margin: 40px auto;
 }
 
 .max-width {
   max-width: 1600px;
   margin: auto;
+}
+
+.yt {
+  position: relative;
+  display: block;
+  width: 900px; /* width of iframe wrapper */
+  height: 0;
+  margin: auto;
+  padding: 0% 0% 60%; /* 16:9 ratio */
+  overflow: hidden;
+}
+@media (max-width: 1000px) {
+  .yt {
+    max-width: 100%;
+  }
+}
+.yt iframe {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60%;
+  border: 0;
+}
+@media (max-width: 1000px) {
+  .yt iframe {
+    height: 100%;
+  }
 }
