--- a/style.css
+++ b/style.css
@@ -45,6 +45,12 @@ h2 {
   font-size: 32px;
 }
 
+@media (max-width: 600px) {
+  h2 {
+    font-size: 24px;
+  }
+}
+
 p {
   font-family: Bagnard;
   font-size: 20px;
@@ -114,8 +120,8 @@ p {
 }
 
 .circle img {
-  height: 500px;
-  width: 500px;
+  height: 400px;
+  width: 400px;
   object-fit: cover;
   border-radius: 50%;
 }
@@ -154,6 +160,12 @@ p {
     height: 60px;
   }
 }
+@media (max-width: 500px) {
+  .letter {
+    width: 30px;
+    height: 40px;
+  }
+}
 
 .medium img {
   width: 400px;
@@ -169,30 +181,30 @@ p {
 }
 
 .yt {
-  position: relative;
-  display: block;
   width: 900px; /* width of iframe wrapper */
-  height: 0;
+  height: 600px;
   margin: auto;
-  padding: 0% 0% 60%; /* 16:9 ratio */
-  overflow: hidden;
 }
 @media (max-width: 1000px) {
   .yt {
+    position: relative;
+    display: block;
     max-width: 100%;
+    width: 100%;
+    height: 0;
+    padding: 0% 0% 60%; /* 16:9 ratio */
+    overflow: hidden;
   }
 }
-.yt iframe {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 60%;
-  border: 0;
-}
+
 @media (max-width: 1000px) {
   .yt iframe {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
+    border: 0;
   }
 }
